# diagrams-bench

./: LICENSE  diagrams-bench.cabal
benchmarks/: Main.hs
examples/: DragonCurve.hs  Poster.hs  Rotations.hs
