name:                diagrams-bench
version:             0.1.0.0
synopsis:            Diagrams performance test collection
description:         Executables that stress-test diagrams
homepage:            http://projects.haskell.org/diagrams/
license:             BSD3
license-file:        LICENSE
author:              Diagrams
maintainer:          diagrams-discuss@googlegroups.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10

executable dragoncurve-bench
  main-is: DragonCurve.hs
  ghc-options: -main-is DragonCurve -rtsopts
  hs-source-dirs: examples
  other-extensions:    NoMonomorphismRestriction
  build-depends:
        base         >=4.6 && <4.7,
        diagrams-lib >=0.7 && <0.8,
        diagrams-svg >=0.7 && <0.8
  default-language:    Haskell2010

executable poster-bench
  main-is: Poster.hs
  ghc-options: -main-is Poster -rtsopts
  hs-source-dirs: examples
  other-extensions:    NoMonomorphismRestriction
  build-depends:
        base           >=4.6 && <4.7,
        diagrams-lib   >=0.7 && <0.8,
        diagrams-cairo >=0.7 && <0.8,
        diagrams-contrib >=0.7 && <0.8,
        arithmoi       == 0.4.*,
        SVGFonts       ==1.3.*,
        split          >=0.2 && <0.3
  default-language:    Haskell2010

executable rotations-bench
  main-is: Rotations.hs
  ghc-options: -main-is Rotations -rtsopts
  hs-source-dirs: examples
  other-extensions:    NoMonomorphismRestriction
  build-depends:
        base           >=4.6 && <4.7,
        diagrams-lib   >=0.7 && <0.8,
        diagrams-cairo >=0.7 && <0.8,
        split          >=0.2 && <0.3
  default-language:    Haskell2010

benchmark benchmarks
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: benchmarks examples
  default-language:    Haskell2010
  build-depends:
      base < 5,
      cairo,
      criterion,
      diagrams-core,
      diagrams-lib,
      diagrams-cairo,
      diagrams-contrib,
      diagrams-svg,
      arithmoi,
      SVGFonts,
      split
